# data-engineering-cli-buddy

copilot-cli/: .gitignore  BUILD_SUMMARY.md  CHANGELOG.md  README.md  env.example  install.sh  pyproject.toml  requirements.txt
copilot-cli/copilot_cli/: __init__.py
copilot-cli/copilot_cli/cli/: __init__.py  main.py
copilot-cli/copilot_cli/llm/: __init__.py  ollama_client.py
copilot-cli/copilot_cli/utils/: __init__.py  file_utils.py
copilot-cli/data_pipeline/dags/: customer360_etl.py
copilot-cli/data_pipeline/dbt/models/: dim_customer.sql  fct_customer_activity.sql
copilot-cli/data_pipeline/queries/: top_customers.sql
copilot-cli/data_pipeline/schemas/: crm_export_schema.json  customer_events_schema.json
copilot-cli/prompts/: __init__.py  dag_explanation.py  dbt_generation.py  schema_comparison.py  sql_optimization.py
copilot-cli/tests/: __init__.py  test_cli.py
